# project3_Rychagova_Daria_M25-555

./: README.md  pyproject.toml
data/: rates.json
project/: main.py
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/core/data/: portfolios.json  users.json
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py  virtual_wallet.cast
valutatrade_hub/parser_service/data/: exchange_rates.json  portfolios.json  rates.json  session.json  users.json
