[project]
name = "final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Rydary",email = "90640722+Rydary@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
     { include = "project" },
]

[project.scripts]
project = "project.main:main"